[tool.poetry]
name = "snooworld"
version = "0.1.0"
description = ""
authors = ["David Alexander <opensource@thelonelyghost.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.670.0"
pre-commit = "^1.14"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
isort = {version = "^4.3",extras = ["pyproject"]}

[tool.isort]
default_section = "THIRDPARTY"
known_first_party = "snooworld"

[tool.black]
target_version = ['py37']
include = '\.pyi$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
